--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.LoginActivity"/>
+        <activity android:name=".view.HomeActivity"/>
     </application>
 
 </manifest>
