--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".view.LoginActivity"/>
         <activity android:name=".view.HomeActivity"/>
+        <activity android:name=".view.AddPatientActivity"/>
     </application>
 
 </manifest>
