--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".view.HomeActivity"/>
         <activity android:name=".view.AddPatientActivity"/>
         <activity android:name=".view.TestsActivity"/>
+        <activity android:name=".view.AddTestActivity"/>
     </application>
 
 </manifest>
