--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.HomeActivity"/>
         <activity android:name=".view.LoginActivity"/>
         <activity android:name=".view.PatientsActivity"/>
         <activity android:name=".view.AddEditPatientActivity"/>
